--- a/app/templates/directives/cat_form.html
+++ b/app/templates/directives/cat_form.html
@@ -2,4 +2,5 @@
   <label>{{labelText}}</label>
   <input type="text" required data-ng-model="cat.name">
   <button type="submit" data-ng-disabled="catForm.$invalid">{{buttonText}}</button>
+  <div data-ng-transclude></div>  <!-- Have to say where you want it transcluded -->
 </form>
